--- a/PasswordGeneration.csproj
+++ b/PasswordGeneration.csproj
@@ -5,6 +5,15 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
     <ApplicationIcon>008-key-2.ico</ApplicationIcon>
+    <StartupObject>PasswordGeneration.Program</StartupObject>
+    <PackageIcon>008-key-2.png</PackageIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\NetBeansProjects\PasswordGeneration\src\images\008-key-2.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
